# conway_revised

./: CMakeLists.txt
headers/: Board.h  Game.h
src/: Board.cpp  Game.cpp  main.cpp
